--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -522,6 +522,8 @@
 	position: relative;
 	width: 100%;
 	height: 250px;
+	border-radius: 50%;
+	box-shadow: 0 0 1px 0 rgba(0,0,0,.3);
 	div {
 		position: absolute;
 		height: 100%;
