--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -531,12 +531,12 @@
 		overflow: hidden;
 		border-radius: 50%;
 		img {
-			max-width: 100%;
+			max-height: 100%;
 			transition: transform .3s;
 		}
 	}
 	@media screen and (min-width: 500px) {
-		height: 200px;
+		height: 192px;
 	}
 }
 
