Return year display to base mono narrow

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -545,8 +545,7 @@
 .research-item__yr {
 	position: relative;
 	margin-top: 1em;
-//	font-family: "base-mono-wide", monospace;
-	font-family: "Oswald", sans-serif;
+	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
 	color: rgba(0,0,0,.5);
 }
