Set SVG to be absolutely positioned over unmarked floorplan SVG

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -333,7 +333,12 @@ html, body {
 }
 
 .home-find__diagram {
-
+	position: relative;
+	svg {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 }
 
 /* Events: */
