Change _ -> - in id string

--- a/_includes/floorplan-markup.html
+++ b/_includes/floorplan-markup.html
@@ -41,7 +41,7 @@
             <path id="mspace__outline" class="outline__violet" d="M82.65,973.79H14.85a4.13,4.13,0,0,0-4.08,4.07v227.33a4.13,4.13,0,0,0,4.08,4.07H242.17a4.12,4.12,0,0,0,4.07-4.07V977.86a4.12,4.12,0,0,0-4.07-4.07Zm0,227.35-63.76,0V981.85h0l155.45.07,63.83,0-.07,155.46,0,63.82-155.45-.07Z" />
             <polygon id="mspace__fill" class="fill__violet" points="18.92 981.84 18.91 981.84 18.89 1045.66 18.89 1201.12 82.65 1201.14 238.1 1201.21 238.13 1137.39 238.19 981.93 174.37 981.91 18.92 981.84 18.92 981.84 18.92 981.84" />
         </g>
-        <g id="office_hrs" data-name="office hrs">
+        <g id="office-hrs" data-name="office hrs">
             <path id="hours__outline" data-name="outline" class="outline__violet" d="M222.7,1587.68h-.53l-115.82.22a4.14,4.14,0,0,0-2.88,1.23,4,4,0,0,0-1.21,2.87q.08,34.9.14,69.81l.09,46.54a4.13,4.13,0,0,0,.83,2.44l.11.12.07.09a4.28,4.28,0,0,0,.48.49l.11.08a4.13,4.13,0,0,0,2.49.88l69.81-.15,46.55-.08a4.13,4.13,0,0,0,2.87-1.22,4.05,4.05,0,0,0,1.22-2.88q-.08-34.89-.14-69.77l-.09-46.58a4.16,4.16,0,0,0-4.09-4.1Zm-6.3,8.18h2.31l0,0V1650l.08,54.1v.08h0v0l-54.08,0-54,.08h-.11l-.11-54.09-.08-54.09V1596h0v0h7c29.79,0,58.53,0,99-.13Z" />
             <path id="hours__fill" data-name="fill" class="fill__violet" d="M218.71,1595.86H216.4c-40.44.08-69.18.13-99,.13h-7l.08,54.19.11,54.09,54.11-.08,54.08,0-.08-54.2,0-54.08,0,0Z" />
         </g>
