Add classes to highlight text & svg fill on hover/tap
- Will apply w/ JS

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -349,6 +349,14 @@ html, body {
 	}
 }
 
+.highlight-text--js {
+	color: red;
+}
+
+.highlight-svg--js {
+	opacity: .7 !important;
+}
+
 /* Events: */
 
 .home__events {
