Create & import "event" SCSS partial

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@ main {
 @import "person";
 @import "people";
 @import "events";
+@import "event";
 @import "blog";
 @import "spatial-tech";
 @import "research-project";
