--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -1,13 +1,36 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="event-wrapper">
+	<div class="event-main-content" aria-label="Main content">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
-  <div class="post-content">
-    {{ content }}
-  </div>
+		<div class="event__big-title">
+			<span aria-label="page type">People //</span>
+			{{ page.title | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}
+		</div>
 
+		<div class="event-item__date">
+			<div>{{ page.start_date | date: "%b" }}<br/>{{ page.start_date | date: "%-d" }}</div>
+		</div>
+		<div class="event-item__title">
+			<a href="{{ site.url }}/events/{{ page.slug }}">{{ page.title }}</a>
+		</div>
+		<!-- remove trailing seconds zeros on time -->
+		{% assign start_time = page.start_time | date: "%r" | remove: ":00 " %}
+		{% assign end_time = page.end_time | date: "%r" | remove: ":00 " %}
+		<!-- check for leading zero -->
+		{% assign zerocheck1 = start_time | slice: 0 %}
+		{% assign zerocheck2 = end_time | slice: 0 %}
+		<!-- remove if present -->
+		{% if zerocheck1 == '0' %}
+			{% assign start_time = start_time | slice: 1, 6 %}
+		{% endif %}
+		{% if zerocheck2 == '0' %}
+			{% assign end_time = end_time | slice: 1, 6 %}
+		{% endif %}
+		<div class="event-item__logistics">
+			<div class="event-logistics__time"><span>When: </span>{{ page.start_date | date: "%A, %B %-d, %Y" }}, {{ start_time }}-{{ end_time }}</div>
+			<div class="event-logistics__place"><span>Where: </span>{{ page.location }}</div>
+		</div>
+	</div>
 </article>
