Set up selectors for questions & notes sections

--- a/assets/css/_sass/_event.scss
+++ b/assets/css/_sass/_event.scss
@@ -192,4 +192,23 @@
 		}
 	}
 }
+
+.event__questions {
+
+}
+
+.event-questions__text {
+
+}
+
+.event__notes {
+
+}
+
+.event-notes__title {
+
+}
+
+.event-notes__content {
+
 }
