--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -91,7 +91,8 @@ layout: default
 					</ul>
 				</li>
 				{% endif %}
-			</ul> <!-- end notes content -->
+			</ol> <!-- end notes content -->
+			</div>
 		</div> <!-- end notes -->
 
 	</div> <!-- end main content -->
