--- a/assets/css/_sass/_event.scss
+++ b/assets/css/_sass/_event.scss
@@ -21,17 +21,15 @@
 
 .event-wrapper {
 	padding: 0 4.167%;
+	padding-bottom: 3rem;
 	@media screen and (min-width: 600px) {
-		padding: 0 8.33%;
-		padding-top: 3rem; // 2 line heights
+		padding: 3rem 8.33%; // 3rem = 2 line heights
 	}
 	@media screen and (min-width: 768px) {
-		padding: 0 4.167%;
-		padding-top: 3rem; // 2 line heights
+		padding: 3rem 4.167%;
 	}
 	@media screen and (min-width: 1024px) {
-		padding: 0 8.33%;
-		padding-top: 3rem; // 2 line heights
+		padding: 3rem 8.33%;
 	}
 }
 
