--- a/assets/css/_sass/_event.scss
+++ b/assets/css/_sass/_event.scss
@@ -182,12 +182,22 @@
 	}
 }
 
-.event__questions {
+/* Questions: */
 
+.event__questions {
+	position: relative;
+	grid-area: questions;
+	align-self: start;
+	@media screen and (min-width: 768px) {
+		padding-left: 8.33%; // 4.167%;
+	}
 }
 
 .event-questions__text {
-
+	font-family: "base-mono-narrow", monospace;
+	font-weight: 200;
+	line-height: 1.2;
+	opacity: .5;
 }
 
 /* Notes: */
