Wrap event title in div to manipulate relative width
- Using on tablet size

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -7,7 +7,7 @@ layout: default
 
 		<div class="event__big-title">
 			<span aria-label="page type">Events //</span>
-			{{ page.title | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}
+			<div>{{ page.title | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}</div>
 		</div>
 
 		<!-- NB: !!! this only exists until we restructure the YAML !!! -->
