Comment out 'how long' var, change 'where' -> 'place', add event type

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -34,10 +34,11 @@ layout: default
 				{% if page.start_time and page.end_time  %}
 				<span>Time:</span>{{ start_time }}-{{ end_time }}<br/>
 				{% endif %}
-				<span>How long:</span> 2hrs<br/>
+				<!--span>Length:</span>1hr<br/-->
 				{% if page.location %}
-				<span>Where:</span>{{ page.location }}
+				<span>Place:</span>{{ page.location }}<br/>
 				{% endif %}
+				<span>Type:</span> Workshop
 			</div>
 		</div> <!-- end stats -->
 
