Change back to unordered list for notes section

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -65,7 +65,7 @@ layout: default
 		<div class="event__notes">
 			<div class="event-notes__title">Notes</div>
 			<div class="page--borrowed-style">
-			<ol class="event-notes__content">
+			<ul class="event-notes__content">
 				<li><span>Prior knowledge required?</span> Nope! Open to all, especially beginners. <!--code>page.codereqs | default: Nope! No prior knowledge is assumed&amp;beginners definitely encouraged.</code--></li>
 				{% if page.supplies %}
 				<li>Supplies to bring: [insert supplies]</li> <!--code> page.supplies | default: Nope! Come as you are.</code></li-->
@@ -84,7 +84,7 @@ layout: default
 					</ul>
 				</li>
 				{% endif %}
-			</ol> <!-- end notes content -->
+			</ul> <!-- end notes content -->
 			</div>
 		</div> <!-- end notes -->
 
