--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -56,7 +56,7 @@ layout: default
 		<div class="event__calendar">
 			<div class="event-cal__btn">
 				<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxyZnE4aHIycmY1Z3FqcTBsa2tjbm5hbTYga2JkM2F4QHZpcmdpbmlhLmVkdQ&amp;tmsrc=kbd3ax%40virginia.edu" aria-label="Link to add to Google calendar">
-					<img src="{{ 'assets/img/svg/calendar-icon.svg' | relative_url }}" alt="Calendar icon">
+					{% include calendar-icon.html %}
 					<span>Add to Calendar</span>
 				</a>
 			</div>
