--- a/assets/css/_sass/_event.scss
+++ b/assets/css/_sass/_event.scss
@@ -62,6 +62,8 @@
 	}
 }
 
+/* Title: */
+
 .event__big-title {
 	position: relative;
 	grid-area: title;
@@ -84,11 +86,20 @@
 	@media screen and (min-width: 768px) {
 		font-size: 2.5rem;
 	}
+	@media screen and (min-width: 768px) and (max-width: 1023px) {
+		div {
+			width: 125%;
+			padding-bottom: .5em;
+		}
+	}
 	@media screen and (min-width: 1024px) {
 		font-size: 3rem;
 		span {
 			padding-bottom: .5em;
 		}
+	}
+	@media screen and (min-width: 1200px) {
+		padding-right: 4.167%;
 	}
 }
 
