Adjust spacing for description

--- a/assets/css/_sass/_event.scss
+++ b/assets/css/_sass/_event.scss
@@ -141,10 +141,8 @@
 
 .event__description {
 	grid-area: describe;
-	align-self: start;
 	@media screen and (min-width: 768px) {
-		margin-top: .5em;
-		padding-right: 8.33%; // 4.167%;
+		padding-right: 8.33%;
 	}
 	@media screen and (min-width: 1024px) {
 		font-size: 18px;
