In progress work on praxis project tags

--- a/_includes/student-projects.html
+++ b/_includes/student-projects.html
@@ -1,6 +1,4 @@
-We work with students on a regular basis. Below you can find the more substantial projects that we have supported, typically those of our graduate fellows.
-
-{% assign projects = (site.data.student-projects | sort: 'date') %}
+{% assign projects = (site.data.student-projects | sort: 'years' | reverse) %}
 {% assign site_posts = site.posts %}
 {% for project in projects %}
 {% if project.title %}
@@ -8,10 +6,14 @@ We work with students on a regular basis. Below you can find the more substantia
 {% else %}
 ### {{ project.student }}'s Project
 {% endif %}
-* Author: {{ project.student }}
+* Student(s): {{ project.student }}
 * Type: {{ project.type }}
 * Dates: {{ project.years }}
 * Description: {{ project.description }} {% if project.url %} More info at the <a href="{{ project.url }}">project website</a>.{% endif %}
+{% if project.title in ['Prism', 'Ivanhoe', 'ClockWork', 'Dash-Amerikan', 'UVA-Reveal'] %}
+## TO DO - PULL OUT THE POSTS FOR PARTICULAR TAGS
+{% project.posts | where: 'tag' %}
+{% endif %}
 {% if project.posts != empty %}
 * Related Posts
   {% for post_slug in project.posts %}
