--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,12 +68,13 @@ layout: default
         {% assign author_categories = author.people-category | join: "," %}
 
         <div class="post-credits__author">
-          <!-- display person pic if exists -->
+          <!-- display person pic if exists. break statement means the loop will end once the if statement runs once.  -->
           {% for image in site.static_files %}
-            {% if image.path contains page.author and image.path contains 'cropped' %}
+            {% if image.basename == page.author and image.path contains 'cropped' %}
                 <div class="post-author__image">
                   <img src="{{ site.baseurl }}/assets/img/people/cropped/{{ page.author }}.jpg" alt="{{ author.name }}">
                 </div>
+            {% break %}
             {% endif %}
           {% endfor %}
 
