Add migration alert to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,8 @@ layout: default
       </div>
       {% endif %}
 
+    {% include old-post-alert.html %}
+
     </div> <!-- end metadata -->
 
     <!-- text of post -->
