--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
 		<ul class="flexnav-main-grid">
 		{% assign pages = site.pages | sort: 'order' %}
 		{% for page in pages %}
-		{% if page.layout != nil and page.nav %}
+		{% if page.layout != nil and page.nav == True %}
 			<li class="flexnav__item"><a href="{{ page.url }}">{{ page.title | replace: ' and ', ' &amp; ' }}</a></li>
 		{% endif %}
 		{% endfor %}
@@ -17,7 +17,7 @@
 				<div class="flexnav-more__prompt" aria-label="More menu items">More<span>&rsaquo;</span></div>
 				<ul class="flexnav-more__wrapper">
 				{% for page in pages %}
-				{% if page.layout != nil and page.nav %}
+				{% if page.layout != nil and page.nav == True %}
 					<li class="flexnav-more__item"><a href="{{ page.url }}">{{ page.title | replace: ' and ', ' &amp; ' }}</a></li>
 				{% endif %}
 				{% endfor %}
