--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
 		<ul class="flexnav-main-grid">
 		{% assign pages = site.pages | sort: 'order' %}
 		{% for page in pages %}
-		{% unless page.url contains "/page" or page.nav == false %}
+		{% unless page.url contains "/page/" or page.nav == false %}
 		{% if page.layout != nil %}
 			<li class="flexnav__item"><a href="{{ page.url }}">{{ page.title | replace: ' and ', ' &amp; ' }}</a></li>
 		{% endif %}
